--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 <ul>
   <li><a href="https://discord.com/oauth2/authorize?client_id=782777035898617886&amp;permissions=8&amp;scope=bot">Invite WhiteBot</a></li>
 </ul>
-
+        
 <p><a href="/privacy">개인정보 처리방침</a></p>
+<p><a href="/server">공식 서포팅 서버 정보</a></p>
 
 
       </section>
