--- a/privacy.html
+++ b/privacy.html
@@ -73,7 +73,8 @@
 <h4 id="5-기타-문의">5. 기타 문의</h4>
 <p>디스코드 내에서 @Whiteitger#9841에게 DM을 보내거나, <a href="https://discord.gg/aebSVBgzuG">White_team 공식 디스코드 서버</a>에서 기타 문의를 할 수 있습니다.</p>
 
-<p><a href="http://whiteteam.kro.kr/privacy">개인정보 처리방침</a></p>
+<p><a href="/privacy">개인정보 처리방침</a></p>
+<p><a href="/server">공식 서포팅 서버 정보</a></p>
 
 
       </section>
