--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!doctype html>
 <html lang="ko">
+  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+  new Crate({
+    server: '795837553684774933', // White_team
+    channel: '795837554405801986' // #질의응답
+  })
+</script>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -75,7 +81,6 @@
 </ul>
         
 <p><a href="/privacy">개인정보 처리방침</a></p>
-<p><a href="/server">공식 서포팅 서버 정보</a></p>
 
 
       </section>
