--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <li><a href="https://github.com/Whitetiger0423">Whitetiger</a> - 팀장</li>
   <li><a href="https://github.com/PArangSae">PArangSae</a></li>
   <li><a href="https://github.com/entry0917">Seeun</a></li>
+  <li><a href="https://github.com/codemaker-dev">Codemaker-dev</a></li>
 </ul>
 
 <h3 id="봇-소스코드">봇 소스코드</h3>
